Fix gallery visibility by adding height and remove Puberty Ceremony package

--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@
     position: relative;
     overflow: hidden;
     width: 100%;
+    height: 350px;
   }
 
   .marquee-track {
